# Max-Mustermann

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: line.frag  line.vert  sprite.frag  sprite.vert
levels/: hello_world.yaml  pain_axelotl.yaml
src/: CMakeLists.txt  filedialogue.h  glm_includes.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  window.cpp
